# spaceDownloader

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SIGNING.md  adjust_update.py
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: space_downloader_spec.md
history/: history.db
scripts/: README.md  download-dependencies.bat  download-dependencies.ps1  download-dependencies.sh
space-downloader-core/: Cargo.toml
space-downloader-core/src/: config.rs  dependency.rs  download.rs  error.rs  history.rs  lib.rs  logging.rs
space-downloader-gui/: Cargo.toml
space-downloader-gui/locales/en-US/: main.ftl
space-downloader-gui/locales/ja-JP/: main.ftl
space-downloader-gui/src/: localization.rs  main.rs
