[package]
name = "space-downloader-core"
version = "1.1.2"
edition = "2021"
license = "MIT"
authors = ["Space Downloader Contributors"]
description = "Core library for downloading Twitter/X Space audio archives"
repository = "https://github.com/aloinsaloins/spaceDownloader"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
dirs = "5.0"
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde", "fast-rng"] }
url = "2.5"
which = "4.4"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.10"
