[package]
name = "space-downloader-gui"
version = "1.1.3"
edition = "2021"
license = "MIT"
authors = ["Space Downloader Contributors"]
description = "Desktop GUI application for downloading Twitter/X Space audio archives"
repository = "https://github.com/aloinsaloins/spaceDownloader"

[dependencies]
anyhow = "1.0"
directories = "5.0"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
futures = "0.3"
iced = { version = "0.13", features = ["advanced", "tokio", "canvas", "wgpu"] }
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
space-downloader-core = { path = "../space-downloader-core" }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync"] }

tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
unic-langid = { version = "0.9", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
